--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -9,8 +9,9 @@ $font-weight-bold: 600;
 
 $font-weight-black: $font-weight-bold;
 $font-weight-book: $font-weight-regular;
-
-$font-size-header: 14px;
+$font-size-form: 12px;
+$font-size-primary: 14px;
+$font-size-secondary: 16px;
 $font-size-header-scaling: .886vw;
 $font-size-mobile: 24px;
 $font-height-mobile: 29px;
@@ -41,6 +42,10 @@ $color-accent-alt-4: #f05a28;
 /* color specific */
 $header-color-primary: $color-monochrome-5;
 $paragraph-color-primary: $color-monochrome-3;
+$timesheet-button-color-primary: #39b54a;
+$timesheet-button-color-secondary: #34aa44;
+$timesheet-button-color-border: #249533;
+$timesheet-form-button-color: #35ac45;
 
 /* media queries */
 $xs: (max-width: 599px);
@@ -76,7 +81,8 @@ $columns--12: 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3% 8.3%;
 
 /* font sizes */
 $default-font-size: 18px;
-$default-font-size--mobile: 16px;
+$default-font-size--mobile: 14px;
+$default-font-size-scalable--mobile: 3.733vw;
 $heading-primary-size: 36px;
 $heading-primary-size--mobile: 32px;
 $heading-secondary-size: 25px;
@@ -105,31 +111,65 @@ $default-grid-gutter: 10px;
 
 /* border */
 $default-border-radius: 4px;
+$default-border-height: 1px;
 
 /* header */
-$header-min-height: 70px;
+$header-arrow-margin-left: 10px;
+$header-arrow-margin-right: 31px;
+$header-arrow-size: .6vw;
+$header-button-height: 36px;
+$header-button-width: 135px;
+$header-desktop-height: 4.43vw;
+$header-desktop-min-height: 70px;
+$header-font-size-small: 14px;
 $header-height: 4.43vw;
-$header-mobile-height: 13.33vw;
-$header-mobile-item-margin: 11.5vw;
-$header-mobile-company-width: 36.27vw;
+$header-item-padding-scalable: .6vw;
+$header-item-padding: 26px;
+$header-min-height: 70px;
 $header-mobile-button-height: 5.413vw;
 $header-mobile-button-width: 5.386vw;
-$header-desktop-min-height: 70px;
-$header-desktop-height: 4.43vw;
-$header-font-size-small: 14px;
-$header-item-padding: 26px;
-$header-item-padding-scalable: .6vw;
-$header-button-width: 9.4vw;
-$header-button-min-width: 135px;
-$header-button-height: 2.28vw;
-$header-button-min-height: 36px;
-$profile-border-radius: 18px;
+$header-mobile-company-width: 36.27vw;
+$header-mobile-height: 13.33vw;
+$header-mobile-item-margin: 11.5vw;
+$header-mobile-item-padding: 70px;
+$header-nav-item-margin-desktop: 49.5;
+$header-nav-item-margin-tablet: 30px;
+$header-title-bar-padding-vertical: 12px;
+$header-title-margin-left: 49.5px;
+$header-toggle-margin-right: 16px;
+$header-toggle-margin-top: 4px;
 $profile-border-radius-scalable: 1.14vw;
-$profile-picture-size: 32px;
-$profile-picture-size-scalable: 2.02vw;
-$profile-logo-height: 10px;
+$profile-border-radius: 18px;
 $profile-logo-height-scalable: .634vw;
-$profile-logo-width:  75px;
+$profile-logo-height: 10px;
+$profile-logo-margin-top: 11px;
 $profile-logo-width-scalable: 4.747vw;
-$header-arrow-size: .6vw;
-$header-arrow-margin: 10px;
+$profile-logo-width:  75px;
+$profile-margin-bottom-xl: 28px;
+$profile-margin-bottom: 17px;
+$profile-picture-margin: 18px;
+$profile-picture-size: 32px;
+
+/* timesheet-overview */
+$timesheet-mobile-item-width: 91.466vw;
+$timesheet-mobile-item-margin-horizontal: 4.266vw;
+$timesheet-mobile-item-margin-top: 6.4vw;
+$timesheet-mobile-item-height: 9.6vw;
+$timesheet-button-margin-bottom: 8.533vw;
+$timesheet-button-plus-size: 2.666vw;
+$timesheet-button-plus-right: 4vw;
+$timesheet-button-plus-color: #b0edb8;
+
+/* timesheet*/
+$timesheet-sheet-border-left-color: #4f88ef;
+$timesheet-mobile-height: 21.866vw;
+
+/* new-timesheet */
+$timesheet-form-height: 112.533vw;
+$timesheet-form-background-color: #f5f8fa;
+$timesheet-form-border-color: #e6eaee;
+$timesheet-form-select-width: 82.933vw;
+$timesheet-form-select-border-color: #ced0da;
+$timesheet-form-select-background-primary: #f2f4f7;
+$timesheet-form-select-margin-top: 3.2vw;
+$timesheet-form-select-margin-bottom: 4.266vw;
