--- a/components/timesheet-overview/timesheet-overview.scss
+++ b/components/timesheet-overview/timesheet-overview.scss
@@ -20,4 +20,8 @@
     margin-right: $timesheet-button-plus-right;
     width: $timesheet-button-plus-size;
   }
+
+  @include tablet {
+    display: none;
+  }
 }
