restructure time-entry component folder, change classes and comp names

--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -1,6 +1,6 @@
 @import "../../shared/styles/main";
 
-.timesheet-button {
+.time-entry-button {
   background-image: linear-gradient(to bottom, $timesheet-button-color-primary, $timesheet-button-color-secondary 98%);
   border: solid $default-border-height $timesheet-button-color-border;
   border-radius: $default-border-radius;
