--- a/components/time-entry-overview/new-time-entry/new-time-entry.scss
+++ b/components/time-entry-overview/new-time-entry/new-time-entry.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   font-family: $font-primary;
-  font-size: $font-size-form;
+  font-size: $font-size-primary;
   height: $timesheet-form-height;
   margin-left: $timesheet-mobile-item-margin-horizontal;
   margin-top: $timesheet-mobile-item-margin-top;
