--- a/components/time-entry-overview/time-entry/time-entry.scss
+++ b/components/time-entry-overview/time-entry/time-entry.scss
@@ -1,6 +1,6 @@
-@import "../../../../shared/styles/main";
+@import "../../../shared/styles/main";
 
-.timesheet {
+.time-entry {
   align-items: center;
   border: solid $default-border-height $timesheet-form-border-color;
   border-left: $timesheet-sheet-border-left-color solid 4px;
