improve timeEntry render and rearrange folder structure

--- a/components/time-entry-form/time-entry-form.scss
+++ b/components/time-entry-form/time-entry-form.scss
@@ -1,4 +1,4 @@
-@import "../../../shared/styles/main";
+@import "../../shared/styles/main";
 
 .form {
   background-color: $timesheet-form-background-color;
