--- a/components/time-entry/time-entry.scss
+++ b/components/time-entry/time-entry.scss
@@ -2,21 +2,14 @@
 
 .time-entry {
   align-items: center;
-  border: solid $default-border-height $timesheet-form-border-color;
-  border-left: $timesheet-sheet-border-left-color solid 4px;
+  border: solid $default-border-height $color-monochrome-7;
+  border-left: $color-monochrome-6 solid 4px;
   border-radius: $default-border-radius;
   display: flex;
   flex-direction: row;
   font-size: $font-size-secondary;
-  height: $timesheet-mobile-height;
+  height: 82px;
   justify-content: space-around;
-  margin-left: $timesheet-mobile-item-margin-horizontal;
-  margin-top: $timesheet-mobile-margin-top;
-  width: $timesheet-mobile-item-width;
-
-  @include tablet {
-    height: $timesheet-desktop-height;
-    margin-top: $timesheet-desktop-margin-top;
-  }
-
+  margin-left: 16px;
+  width: 343px;
 }
