--- a/components/time-entry-overview/time-entry-overview.scss
+++ b/components/time-entry-overview/time-entry-overview.scss
@@ -1,24 +1,23 @@
 @import "../../shared/styles/main";
 
 .time-entry-button {
-  background-image: linear-gradient(to bottom, $timesheet-button-color-primary, $timesheet-button-color-secondary 98%);
-  border: solid $default-border-height $timesheet-button-color-border;
+  background-image: linear-gradient(to bottom, $color-monochrome-13, $color-monochrome-14 98%);
+  border: solid $default-border-height $color-monochrome-12;
   border-radius: $default-border-radius;
   color: $color-letter-on-primary;
   font-family: $font-primary;
-  font-size: $default-font-size-scalable--mobile;
-  font-weight: $font-weight-bold;
+  font-size: $font-size-primary;
   height: 36px;
-  margin-bottom: $timesheet-button-margin-bottom;
+  margin-bottom: 32px;
   margin-left: 16px;
-  margin-top: $timesheet-mobile-item-margin-top;
+  margin-top: 24px;
   width: 343px;
 
   &__plus {
-    color: $timesheet-button-plus-color;
-    height: $timesheet-button-plus-size;
-    margin-right: $timesheet-button-plus-right;
-    width: $timesheet-button-plus-size;
+    color: $color-monochrome-11;
+    height: 10px;
+    margin-right: 15px;
+    width: 10px;
   }
 
   @include tablet {
