--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -43,8 +43,8 @@
 
 .title-bar {
   background: $color-primary;
-  padding-bottom: $header-title-bar-padding-vertical;
-  padding-top: $header-title-bar-padding-vertical;
+  padding-bottom: 12px;
+  padding-top: 12px;
   text-align: center;
   text-decoration: none;
   width: 100%;
@@ -58,10 +58,10 @@
     font-family: $font-titlebar;
     font-size: $font-size-mobile;
     height: $font-height-mobile;
-    margin-left: $header-title-margin-left;
+    margin-left: 49.5px;
     text-decoration: none;
-    width: $header-mobile-company-width;
-  }
+    width: 136px;
+   }
 }
 
 .main-nav {
@@ -76,9 +76,6 @@
     height: 100%;
     visibility: visible;
   }
-  @include desktop-xlarge {
-    padding-top: $header-item-padding-scalable;
-  }
 
   &--open {
     display: block;
@@ -89,12 +86,12 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding-top: $header-mobile-item-padding;
+    padding-top: 70px;
 
     @include tablet {
       align-items: flex-start;
       flex-direction: row;
-      padding-top: $header-item-padding;
+      padding-top: 26px;
       }
     }
 
@@ -109,19 +106,16 @@
     justify-content: center;
     letter-spacing: normal;
     line-height: normal;
-    margin-bottom: $header-mobile-item-margin;
+    margin-bottom: 43px;
     text-align: center;
 
     @include tablet {
       display: inline;
       font-size: $font-size-primary;
       font-weight: $font-weight-bold;
-      margin-left: $header-nav-item-margin-tablet;
+      margin-left: 30px;
       }
-    @include desktop-large {
-      font-size: $font-size-header-scaling;
-      margin-left: $header-nav-item-margin-desktop;
-      }
+
 
     &--active {
       background: $color-highlight;
@@ -145,27 +139,24 @@
     align-items: center;
     align-self: flex-end;
     background-color: $color-monochrome-1;
-    border-radius: $profile-border-radius;
+    border-radius: 18px;
     display: flex;
-    height: $header-button-height;
+    height: 36px;
     justify-content: space-between;
-    margin-bottom: $profile-margin-bottom;
-    width: $header-button-width;
+    margin-bottom: 17px;
+    width: 135px;
 
-    @include desktop-xlarge {
-      margin-bottom: $profile-margin-bottom-xl;
-    }
 
     & .logo {
-      height: $profile-logo-height;
-      width: $profile-logo-width;
+      height: 10px;
+      width: 75px;
     }
 
     & .picture {
-      border-radius: $profile-border-radius;
-      height: $profile-picture-size;
-      margin-left:  $profile-picture-margin;
-      width: $profile-picture-size;
+      border-radius: 18px;
+      height: 32px;
+      margin-left:  18px;
+      width: 32px;
 
     }
   }
@@ -173,12 +164,9 @@
 
 .arrow-down {
   display: none;
-  margin-left: $header-arrow-margin-left;
-  margin-right: $header-arrow-margin-right;
+  margin-left: 10px;
+  margin-right: 31px;
   @include tablet {
     display: block;
-  }
-  @include desktop-xlarge {
-    width: $header-arrow-size;
   }
 }
