--- a/components/time-entry-form/time-entry-form.scss
+++ b/components/time-entry-form/time-entry-form.scss
@@ -1,5 +1,39 @@
 @import "../../shared/styles/main";
 
+.time-entry-button {
+  background-image: linear-gradient(to bottom, $color-monochrome-13, $color-monochrome-14 98%);
+  border: solid $default-border-height $color-monochrome-12;
+  border-radius: $default-border-radius;
+  color: $color-letter-on-primary;
+  font-family: $font-primary;
+  font-size: $font-size-primary;
+  height: 36px;
+  margin-bottom: 32px;
+  margin-left: 16px;
+  margin-top: 24px;
+  width: 343px;
+
+  &--hidden {
+    display: none;
+  }
+
+  &--visible {
+    display: block;
+  }
+
+  &__plus {
+    color: $color-monochrome-11;
+    height: 10px;
+    margin-right: 15px;
+    width: 10px;
+  }
+
+  @include tablet {
+    display: none;
+  }
+}
+
+
 .form {
   background-color: $color-monochrome-8;
   border: solid $default-border-height $color-monochrome-7;
@@ -15,8 +49,17 @@
   margin-top: 24px;
   width: 343px;
 
+  &--open {
+    display: flex;
+  }
+
+  &--close {
+    display: none;
+  }
+
   @include tablet {
     align-items: center;
+    display: flex;
     flex-direction: row;
     height: 94px;
     justify-content: space-between;
