--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -44,6 +44,7 @@ $color-monochrome-12: #249533;
 $color-monochrome-13: #39b54a;
 $color-monochrome-14: #34aa44;
 $color-monochrome-15: #ced0da;
+$color-monochrome-16: #f2f4f7;
 
 $color-accent-alt-1: #f70;
 $color-accent-alt-2: #70c017;
@@ -115,6 +116,8 @@ $subnav-height--mobile: 72px;
 /* spacing */
 $padding: 20px;
 $default-grid-gutter: 10px;
+$default-margin: 16px;
+$default-margin-desktop: 206px;
 
 /* border */
 $default-border-radius: 4px;
