--- a/components/time-entry-form/time-entry-form.scss
+++ b/components/time-entry-form/time-entry-form.scss
@@ -40,6 +40,8 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
 
   }
 }
