--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -45,6 +45,7 @@ $color-monochrome-13: #39b54a;
 $color-monochrome-14: #34aa44;
 $color-monochrome-15: #ced0da;
 $color-monochrome-16: #f2f4f7;
+$color-monochrome-17: #fb6375;
 
 $color-accent-alt-1: #f70;
 $color-accent-alt-2: #70c017;
