--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -46,6 +46,7 @@ $color-monochrome-14: #34aa44;
 $color-monochrome-15: #ced0da;
 $color-monochrome-16: #f2f4f7;
 $color-monochrome-17: #fb6375;
+$color-monochrome-18: #7f8fa4;
 
 $color-accent-alt-1: #f70;
 $color-accent-alt-2: #70c017;
