--- a/components/time-entries/time-entries.scss
+++ b/components/time-entries/time-entries.scss
@@ -1,6 +1,18 @@
 @import "../../shared/styles/main";
 
-.date {
+.date-row {
+  align-items: center;
+  display: flex;
+  font-size: 16px;
+  justify-content: space-between;
   margin-bottom: 16px;
   margin-top: 32px;
+
+  @include tablet {
+    font-size: 24px;
+  }
+
+  & .time {
+    color: $color-monochrome-18;
+  }
 }
