--- a/components/time-entry-form/time-entry-form.scss
+++ b/components/time-entry-form/time-entry-form.scss
@@ -117,6 +117,10 @@
       height: 36px;
       margin-top: 12px;
       width: 100%;
+
+      &:invalid {
+        border: solid $default-border-height $color-monochrome-17;
+      }
     }
 
     & input {
@@ -127,6 +131,10 @@
       height: 36px;
       margin-top: 12px;
       width: 100%;
+
+      &:invalid {
+        border: solid $default-border-height $color-monochrome-17;
+      }
     }
 
     &--half {
@@ -179,4 +187,13 @@
     }
 
   }
+}
+
+.invalid-form {
+  background-color: $color-monochrome-7;
+  border: none;
+}
+
+.invalid-input {
+  border-color: $color-monochrome-7;
 }
