--- a/components/team-member/team-member.scss
+++ b/components/team-member/team-member.scss
@@ -13,7 +13,7 @@
   width: 100%;
 }
 
-.top-row {
+.team-member__top-row {
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -96,16 +96,16 @@
   margin-right: 22px;
   width: 20px;
 
-  &--clicked {
+  &--opened {
     background: url("/static/icons/arrow-up.svg") no-repeat center;
   }
 }
 
-.employee-details-mobile--collapsed {
+.team-member__employee-details-mobile--collapsed {
   display: none;
 }
 
-.employee-details-mobile--expanded {
+.team-member__employee-details-mobile--expanded {
   display: flex;
   flex-direction: column;
   height: 168px;
