add styling to form component, buttons wip

--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -47,6 +47,11 @@ $color-monochrome-15: #ced0da;
 $color-monochrome-16: #f2f4f7;
 $color-monochrome-17: #fb6375;
 $color-monochrome-18: #7f8fa4;
+$color-monochrome-19: #dfe3e9;
+$color-monochrome-20: #2ea1f8;
+$color-monochrome-21: #1a91ec;
+$color-monochrome-22: #137ece;
+$color-monochrome-23: #288bd5;
 
 $color-accent-alt-1: #f70;
 $color-accent-alt-2: #70c017;
