implement change requests

--- a/components/team-member-form/team-member-form.scss
+++ b/components/team-member-form/team-member-form.scss
@@ -83,7 +83,7 @@
     display: flex;
     font-size: 18px;
     justify-content: center;
-    padding: 0 15px;
+    padding: 0 33px;
   }
 }
 
@@ -95,25 +95,55 @@
   display: flex;
   flex-direction: row;
   margin-top: -1px;
+
+  &-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &-twitter-logo {
+    background-image: linear-gradient(to bottom, $color-monochrome-20, $color-monochrome-21);
+    border-bottom-left-radius: 4px;
+    border-right: none;
+    border-top-left-radius: 4px;
+    height: 36px;
+    width: 36px;
+  }
+
+  &-facebook-logo {
+    background-image: linear-gradient(to top, $color-monochrome-22, $color-monochrome-23);
+    border-bottom-left-radius: 4px;
+    border-right: none;
+    border-top-left-radius: 4px;
+    height: 36px;
+    width: 36px;
+  }
+
+  &-svg {
+    height: 13px;
+    margin: 12px 10px;
+    width: 16px;
+  }
 }
 
-.team-member-form__personal__first-column {
+.team-member-form__personal-left-column {
   margin-left: 30px;
   margin-top: 33px;
 
-  &__picture {
+  &-picture {
     border-radius: 50px;
     height: 100px;
     width: 100px;
   }
 
-  &__text {
+  &-text {
     margin-top: 10px;
     text-align: center;
   }
 }
 
-.team-member-form__personal__middle-column {
+.team-member-form__personal-middle-column {
   border-right: solid $default-border-height $color-monochrome-19;
   display: flex;
   flex-direction: column;
@@ -122,15 +152,9 @@
   margin-top: 33px;
   padding-right: 30px;
   width: 50%;
-
-  &__row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
 }
 
-.team-member-form__personal__last-column {
+.team-member-form__personal-right-column {
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
@@ -138,42 +162,5 @@
   padding-left: 30px;
   padding-right: 30px;
   width: 50%;
-
-  &__row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  &__twitter-logo {
-    background-image: linear-gradient(to bottom, $color-monochrome-20, $color-monochrome-21);
-    border-bottom-left-radius: 4px;
-    border-right: none;
-    border-top-left-radius: 4px;
-    height: 36px;
-    width: 36px;
-
-    &__svg {
-      height: 13px;
-      margin: 12px 10px;
-      width: 16px;
-    }
-  }
-
-  &__facebook-logo {
-    background-image: linear-gradient(to top, $color-monochrome-22, $color-monochrome-23);
-    border-bottom-left-radius: 4px;
-    border-right: none;
-    border-top-left-radius: 4px;
-    height: 36px;
-    width: 36px;
-
-    &__svg {
-      height: 13px;
-      margin: 12px 10px;
-      width: 16px;
-    }
-
-  }
 
 }
