--- a/components/team-member-form/team-member-form.scss
+++ b/components/team-member-form/team-member-form.scss
@@ -39,11 +39,14 @@
   &__label {
     color: $color-monochrome-18;
     display: block;
+    width: 100%;
 
     &-half {
-      flex-basis: 49%;
+      margin-right: 10px;
     }
   }
+
+
 
   &__input {
     border: solid $default-border-height $color-monochrome-7;
@@ -160,7 +163,6 @@
   margin-bottom: 24px;
   margin-top: 33px;
   padding-left: 30px;
-  padding-right: 30px;
+  margin-right: 30px;
   width: 50%;
-
 }
