--- a/components/team-member-form/team-member-form.scss
+++ b/components/team-member-form/team-member-form.scss
@@ -46,8 +46,6 @@
     }
   }
 
-
-
   &__input {
     border: solid $default-border-height $color-monochrome-7;
     border-radius: $default-border-radius;
@@ -68,6 +66,44 @@
     border-radius: $default-border-radius;
     min-height: 84px;
     width: 100%;
+  }
+
+  &__cancel-button {
+    background-color: $color-monochrome-8;
+    border: solid 1px $color-monochrome-7;
+    border-radius: $default-border-radius;
+    height: 36px;
+    margin-right: 12px;
+    width: 100px;
+
+  }
+
+  &__submit-button {
+    background-image: linear-gradient(to bottom, $color-monochrome-13, $color-monochrome-14 98%);
+    border: solid 1px $color-monochrome-12;
+    border-radius: $default-border-radius;
+    color: $color-monochrome-1;
+    height: 36px;
+    width: 100px;
+  }
+}
+
+.team-member-form__title-bar {
+  font-size: 24px;
+  margin-top: 36px;
+  width: 100%;
+
+  &--visible {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &--hidden {
+    display: none;
+  }
+
+  &-buttons {
+    font-size: $default-font-size;
   }
 }
 
@@ -161,8 +197,8 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
+  margin-right: 30px;
   margin-top: 33px;
   padding-left: 30px;
-  margin-right: 30px;
   width: 50%;
 }
