--- a/components/team-member-form/team-member-form.scss
+++ b/components/team-member-form/team-member-form.scss
@@ -1,44 +1,10 @@
 @import "../../shared/styles/main";
 
-.team-member-button {
-  background-image: linear-gradient(to bottom, $color-monochrome-13, $color-monochrome-14 98%);
-  border: solid $default-border-height $color-monochrome-12;
-  border-radius: $default-border-radius;
-  color: $color-letter-on-primary;
-  font-family: $font-primary;
-  font-size: $font-size-primary;
-  height: 36px;
-  margin-bottom: 32px;
-  margin-top: 24px;
-  width: 100%;
-
-  &--hidden {
-    display: none;
-  }
-
-  &--visible {
-    display: block;
-  }
-
-  &__plus {
-    margin-right: 15px;
-  }
-}
-
-
 .team-member-form {
   border-left: $color-monochrome-6 solid 4px;
   border-radius: $default-border-radius;
   font-family: $font-primary;
   width: 100%;
-
-  &--hidden {
-    display: none;
-  }
-
-  &--visible {
-    display: block;
-  }
 
   &__label {
     color: $color-monochrome-18;
@@ -92,18 +58,11 @@
 }
 
 .team-member-form__title-bar {
+  display: flex;
   font-size: 24px;
   margin-top: 36px;
+  justify-content: space-between;
   width: 100%;
-
-  &--visible {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &--hidden {
-    display: none;
-  }
 
   &-buttons {
     font-size: $default-font-size;
@@ -135,8 +94,12 @@
   border-right: solid $default-border-height $color-monochrome-7;
   border-top: solid $default-border-height $color-monochrome-7;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-top: -1px;
+
+  @include tablet {
+    flex-direction: row;
+  }
 }
 
 .team-member-form__personal-row {
